--- a/docs/Projects/151_CPU.md
+++ b/docs/Projects/151_CPU.md
@@ -32,4 +32,4 @@ After finishing up the CSR, it is just a matter of labor work again to fix up th
 
 ## Cache
 
-Cache is where we suffered the most for sure. We were asked to designa dn implement a 
+Cache is where we suffered the most for sure. We were asked to design and implement a 
